@@ -1,3 +1,7 @@
+2010-07-05  Alan Modra  <amodra@gmail.com>
+
+	* readelf.c (uncompress_section_contents): Avoid gcc-4.6 warning.
+
 2010-07-03  Cary Coutant  <ccoutant@google.com>
 
 	* objdump.c (load_specific_debug_section): Decompress section contents
